--- a/approved/index.html
+++ b/approved/index.html
@@ -11,20 +11,27 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     :root { --brand: #22c55e; }
-    body { font-family: 'Inter', system-ui, sans-serif; }
-    .shadow-soft { box-shadow: 0 10px 25px rgba(2,6,23,.08); }
+    body{ font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial,'Noto Sans','Liberation Sans',sans-serif; }
+    .container{ max-width:980px; }
+    .shadow-soft{ box-shadow:0 10px 25px rgba(2,6,23,.08); }
+    .badge{ display:inline-block; padding:4px 10px; border-radius:999px; font-weight:700; font-size:.8rem; }
 
-    /* Animações da mensagem WhatsApp */
-    .msg-whats {
-      font-size: 1.4rem;
+    #statusEnvio {
+      display: inline-block;
+      font-size: 1.3rem;
       font-weight: 700;
-      color: var(--brand);
-      animation: pulse 1s infinite;
+      margin-top: 1.5rem;
+      background: #ecfdf5;
+      color: #047857;
+      border: 2px solid #6ee7b7;
+      border-radius: 1rem;
+      padding: 1rem 1.5rem;
+      animation: pulseText 1s infinite alternate;
+      transition: all .3s ease;
     }
-    @keyframes pulse {
-      0% { opacity: 1; }
-      50% { opacity: 0.6; }
-      100% { opacity: 1; }
+    @keyframes pulseText {
+      0% { opacity: 1; box-shadow: 0 0 10px rgba(16,185,129,0.4); }
+      100% { opacity: 0.7; box-shadow: 0 0 20px rgba(16,185,129,0.8); }
     }
   </style>
 </head>
@@ -32,14 +39,14 @@
 
   <!-- Header -->
   <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
-    <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between">
+    <div class="container mx-auto px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
         <div class="h-9 w-9 rounded-2xl bg-emerald-100 flex items-center justify-center">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-emerald-600" viewBox="0 0 24 24" fill="none" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 6v6l4 2"/>
           </svg>
         </div>
-        <span class="font-extrabold tracking-tight text-lg">Dieta Pronta Online</span>
+        <span class="font-extrabold tracking-tight">Dieta Pronta Online</span>
       </div>
       <div class="text-sm text-slate-500 hidden md:block">Pagamento confirmado</div>
     </div>
@@ -47,19 +54,21 @@
 
   <!-- Hero -->
   <section class="bg-gradient-to-b from-white to-slate-100 text-center">
-    <div class="max-w-3xl mx-auto px-4 py-12">
+    <div class="container mx-auto px-4 py-14">
       <h1 class="text-3xl md:text-5xl font-extrabold text-emerald-600">🎉 Parabéns, <span id="nomeSpan">sua jornada começou com o pé direito!</span></h1>
-      <p class="mt-4 text-lg text-slate-700">
+      <p class="mt-4 text-lg text-slate-700 max-w-2xl mx-auto">
         Seu pagamento foi <strong>aprovado com sucesso!</strong>  
         Agora você tem acesso ao seu <strong>Plano Alimentar Personalizado</strong>, criado com base no seu corpo e nas suas respostas do quiz. 🥗
       </p>
-      <div id="msgWhats" class="mt-6 msg-whats"></div>
+
+      <!-- 🚀 MENSAGEM DE ENVIO AUTOMÁTICO -->
+      <div id="statusEnvio" class="mx-auto"></div>
     </div>
   </section>
 
-  <!-- Resumo -->
-  <section class="py-8">
-    <div class="max-w-4xl mx-auto px-4">
+  <!-- Resumo do Plano -->
+  <section class="py-10">
+    <div class="container mx-auto px-4">
       <div class="p-6 bg-white rounded-2xl shadow-soft border border-slate-200">
         <h2 class="text-2xl font-extrabold mb-3 text-emerald-700">📋 Resumo do seu plano</h2>
         <div class="grid md:grid-cols-2 gap-6 text-slate-700">
@@ -70,25 +79,44 @@
           </div>
           <div>
             <p><strong>IMC:</strong> <span id="infoIMC">-</span> <small id="infoIMCLabel" class="text-slate-500"></small></p>
-            <p><strong>Plano:</strong> Personalizado</p>
+            <p><strong>Plano:</strong> <span id="infoPlano">Personalizado</span></p>
           </div>
         </div>
+        <div id="descSpan" class="mt-4 text-slate-600 text-sm italic"></div>
       </div>
     </div>
   </section>
 
-  <!-- Formulário de Envio por E-mail -->
-  <section class="py-8">
-    <div class="max-w-md mx-auto bg-white rounded-2xl shadow-soft border border-slate-200 p-6 text-center">
-      <h3 class="text-2xl font-bold text-emerald-700 mb-3">📧 Receba seu plano por e-mail</h3>
-      <p class="text-slate-600 mb-5">Digite seu e-mail abaixo e receba automaticamente seu plano personalizado (com PDF em anexo).</p>
+  <!-- Acesso ao Plano (EMAIL) -->
+  <section class="py-10">
+    <div class="container mx-auto px-4 max-w-2xl">
+      <div class="rounded-2xl bg-white border border-slate-200 shadow-soft p-6 text-center">
+        <h2 class="text-2xl font-extrabold mb-3">📧 Receba seu plano por e-mail</h2>
+        <p class="text-slate-700 mb-4">
+          Prefere receber seu plano personalizado por e-mail? Basta inserir seu endereço abaixo e enviaremos automaticamente.
+        </p>
 
-      <form id="formEmail" class="space-y-4">
-        <input type="email" id="emailInput" required placeholder="Seu melhor e-mail" class="w-full border rounded-xl px-4 py-3 text-slate-700 focus:outline-none focus:ring-2 focus:ring-emerald-500">
-        <button type="submit" class="w-full bg-[var(--brand)] text-white font-semibold rounded-xl px-4 py-3 hover:bg-emerald-600 transition">Enviar agora</button>
-      </form>
+        <!-- Formulário de envio de e-mail -->
+        <div id="emailForm" class="flex flex-col gap-3 items-center">
+          <input type="email" id="emailInput" placeholder="Digite seu e-mail" class="border rounded-xl p-3 w-full max-w-md text-center" />
+          <button id="btnEmail" class="rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">
+            Enviar meu plano por e-mail
+          </button>
+        </div>
 
-      <div id="statusEmail" class="mt-4 text-slate-700 font-medium"></div>
+        <div id="emailStatus" class="mt-3 font-medium text-emerald-600"></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Agradecimento -->
+  <section class="py-10 text-center">
+    <div class="container mx-auto px-4">
+      <h3 class="text-xl font-bold text-emerald-600">💚 Obrigado por confiar em nós!</h3>
+      <p class="mt-2 text-slate-700 max-w-xl mx-auto">
+        Nossa equipe vai te enviar seu plano personalizado em breve.  
+        Fique de olho no seu WhatsApp e e-mail — é por lá que você receberá tudo!
+      </p>
     </div>
   </section>
 
@@ -96,62 +124,122 @@
     <p>© <span id="year"></span> Dieta Pronta Online. Todos os direitos reservados.</p>
   </footer>
 
+  <!-- Scripts -->
   <script>
-  document.addEventListener("DOMContentLoaded", () => {
+  document.addEventListener("DOMContentLoaded", function(){
     const nome = localStorage.getItem('lead_nome') || '';
-    const dieta = localStorage.getItem('quiz_result_title') || 'Dieta Personalizada';
-    const bodyType = localStorage.getItem('quiz_result_body_name') || '';
-    const imc = localStorage.getItem('quiz_imc_value') || '';
-    const imcLabel = localStorage.getItem('quiz_imc_label') || '';
+    const dietTitle = localStorage.getItem('diet_title') || localStorage.getItem('quiz_result_title') || '';
+    const bodyType = localStorage.getItem('body_type') || localStorage.getItem('quiz_body_type') || '';
+    const imcValue = localStorage.getItem('imc_value') || '';
+    const imcLabel = localStorage.getItem('imc_label') || '';
+    const desc = localStorage.getItem('quiz_result_desc') || '';
     const phone = localStorage.getItem('lead_whats') || '';
+
+    if(nome) document.getElementById('nomeSpan').textContent = nome + "!";
     document.getElementById('year').textContent = new Date().getFullYear();
-
     document.getElementById('infoNome').textContent = nome || '-';
-    document.getElementById('infoDieta').textContent = dieta;
-    document.getElementById('infoBodyType').textContent = bodyType;
-    document.getElementById('infoIMC').textContent = imc;
-    document.getElementById('infoIMCLabel').textContent = imcLabel ? "(" + imcLabel + ")" : "";
+    document.getElementById('infoDieta').textContent = dietTitle || 'Personalizada';
+    document.getElementById('infoBodyType').textContent = bodyType || '---';
+    document.getElementById('infoIMC').textContent = imcValue || '---';
+    document.getElementById('infoIMCLabel').textContent = imcLabel ? "(" + imcLabel + ")" : '';
+    document.getElementById('descSpan').textContent = desc;
 
-    // === Mensagem dinâmica WhatsApp ===
-    const msgEl = document.getElementById('msgWhats');
+    // Mensagem de envio automático WhatsApp
+    const statusDiv = document.getElementById('statusEnvio');
     let count = 5;
-    msgEl.textContent = "⏳ Enviando plano para seu WhatsApp...";
+    statusDiv.textContent = "⏳ Enviando plano para seu WhatsApp...";
     const timer = setInterval(() => {
-      msgEl.textContent = `⏳ Enviando plano para seu WhatsApp... (${count})`;
+      statusDiv.textContent = `⏳ Enviando plano para seu WhatsApp... ${count}`;
       count--;
       if (count < 0) {
         clearInterval(timer);
-        msgEl.innerHTML = `✅ Enviado com sucesso para seu WhatsApp: <strong>${phone.replace(/^55/, '').replace(/(\d{2})(\d{5})(\d{4})/, '($1) $2-$3')}</strong>`;
-        msgEl.classList.remove('msg-whats');
+        statusDiv.textContent = `✅ Enviado com sucesso para seu WhatsApp: ${phone ? phone.replace(/^55/, '').replace(/(\d{2})(\d{5})(\d{4})/, "($1) $2-$3") : 'número não encontrado'}`;
+        statusDiv.style.animation = "none";
+        statusDiv.style.background = "#d1fae5";
+        statusDiv.style.color = "#065f46";
       }
     }, 1000);
+  });
 
-    // === Envio do e-mail ===
-    const form = document.getElementById('formEmail');
-    const status = document.getElementById('statusEmail');
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = document.getElementById('emailInput').value.trim();
-      if (!email) return;
+  // === Simula envio por e-mail ===
+  document.addEventListener("DOMContentLoaded", () => {
+    const btnEmail = document.getElementById("btnEmail");
+    const emailInput = document.getElementById("emailInput");
+    const emailStatus = document.getElementById("emailStatus");
 
-      status.innerHTML = "📤 Enviando seu plano para o e-mail...";
-      try {
-        const res = await fetch('https://italomelo.com/server/send_email_plan.php', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ name: nome, email: email, dieta: dieta })
-        });
-        const data = await res.json();
-        if (data.ok) {
-          status.innerHTML = "✅ Plano enviado com sucesso para: <strong>" + email + "</strong>";
-        } else {
-          status.innerHTML = "⚠️ Falha no envio: " + (data.error || "erro desconhecido");
-        }
-      } catch (err) {
-        status.innerHTML = "❌ Erro ao conectar com o servidor de envio.";
-        console.error(err);
+    btnEmail.addEventListener("click", async () => {
+      const email = emailInput.value.trim();
+      if (!email || !email.includes("@")) {
+        emailStatus.textContent = "⚠️ Digite um e-mail válido.";
+        emailStatus.style.color = "red";
+        return;
       }
+
+      emailStatus.textContent = "⏳ Enviando plano para " + email + "...";
+      emailStatus.style.color = "#047857";
+
+      // Aqui entrará sua futura integração de envio real
+      await new Promise(r => setTimeout(r, 2000));
+
+      emailStatus.textContent = "✅ Plano enviado com sucesso para " + email;
+      emailStatus.style.color = "#047857";
     });
+  });
+  </script>
+
+
+
+  <a id="btnEmail" href="#" class="block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold hover:bg-emerald-600 transition">
+  Receber meu plano por e-mail
+</a>
+<div id="statusEnvio" class="mt-4 text-center text-slate-700 font-medium"></div>
+
+<script>
+document.getElementById("btnEmail").addEventListener("click", async (e) => {
+  e.preventDefault();
+  const nome = localStorage.getItem('lead_nome') || '';
+  const email = localStorage.getItem('lead_email') || '';
+  const dieta = localStorage.getItem('quiz_result_title') || 'Dieta Personalizada';
+  const upsell = localStorage.getItem('upsell_comprado') === '1';
+  const status = document.getElementById('statusEnvio');
+  status.innerHTML = "📤 Enviando seu plano por e-mail...";
+  
+  try {
+    const res = await fetch('https://italomelo.com/server/send_email_plan.php', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ name: nome, email, dieta, upsell })
+    });
+    const data = await res.json();
+    if (data.ok) {
+      status.innerHTML = "✅ Plano enviado com sucesso para: <strong>" + email + "</strong>";
+    } else {
+      status.innerHTML = "⚠️ Falha no envio: " + (data.error || 'erro desconhecido');
+    }
+  } catch (err) {
+    console.error(err);
+    status.innerHTML = "❌ Erro de conexão ao enviar o e-mail.";
+  }
+});
+</script>
+
+
+  <script>
+  // Envio automático WhatsApp
+  document.addEventListener("DOMContentLoaded", async () => {
+    const phone = localStorage.getItem('lead_whats') || '';
+    const dieta = localStorage.getItem('quiz_result_title') || 'Dieta Personalizada';
+
+    try {
+      const res = await fetch('https://italomelo.com/server/whatsapp-bot.php', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ phone: phone, message: dieta })
+      });
+      console.log("✅ Resposta do servidor:", await res.json());
+    } catch (e) {
+      console.error("❌ Erro ao enviar para WhatsApp:", e);
+    }
   });
   </script>
 </body>
