--- a/approved-upsell/index.html
+++ b/approved-upsell/index.html
@@ -1,6 +1,6 @@
 <?php
 /**
- * Envio Automático do Upsell (Dieta + Receitas)
+ * Envio Automático de Planos + Receitas (UPSELL)
  * --------------------------------------------------------
  * E-mail: contato@dietapronta.online
  * SMTP: mail.dietapronta.online (porta 465, SSL)
@@ -57,121 +57,135 @@ if (!$email || !filter_var($email, FILTER_VALIDATE_EMAIL)) {
 // MAPA DE DIETAS (Link do PDF)
 // ======================================================================
 $mensagens = [
-    'Low Carb' => 'https://dietapronta.online/pdfs/Dieta_Low_Carb.pdf',
-    'Cetogênica' => 'https://dietapronta.online/pdfs/Dieta_Cetogenica.pdf',
-    'Flexível' => 'https://dietapronta.online/pdfs/Dieta_Flexivel.pdf',
-    'Mediterrânea' => 'https://dietapronta.online/pdfs/Dieta_Mediterranea.pdf',
-    '200 Receitas Saudáveis' => 'https://dietapronta.online/pdfs/200_Receitas_Saudaveis.pdf'
+  'Low Carb'               => 'https://dietapronta.online/pdfs/Dieta_Low_Carb.pdf',
+  'Cetogênica'             => 'https://dietapronta.online/pdfs/Dieta_Cetogenica.pdf',
+  'Flexível'               => 'https://dietapronta.online/pdfs/Dieta_Flexivel.pdf',
+  'Mediterrânea'           => 'https://dietapronta.online/pdfs/Dieta_Mediterranea.pdf',
+  '200 Receitas Saudáveis' => 'https://dietapronta.online/pdfs/200_Receitas_Saudaveis.pdf'
 ];
 
 // === MAPEAMENTO DE PALAVRAS-CHAVE ===
 $dietas_mapeadas = [
-    'low carb' => 'Low Carb',
-    'cetogenica' => 'Cetogênica',
-    'flexivel' => 'Flexível',
-    'mediterranea' => 'Mediterrânea',
-    'ectomorfo' => 'Low Carb',
-    'mesomorfo' => 'Flexível',
-    'endomorfo' => 'Cetogênica'
+  'low carb'    => 'Low Carb',
+  'cetogenica'  => 'Cetogênica',
+  'flexivel'    => 'Flexível',
+  'mediterranea'=> 'Mediterrânea',
+  'ectomorfo'   => 'Low Carb',
+  'mesomorfo'   => 'Flexível',
+  'endomorfo'   => 'Cetogênica'
 ];
 
-// === ENCONTRA A DIETA CORRETA (IGNORA EMOJI E CASE) ===
+// === ENCONTRA A DIETA CORRETA ===
 $dieta_encontrada = null;
 $dieta_limpa = strtolower(preg_replace('/[^\w\s]/', '', $dieta_raw));
 
 foreach ($dietas_mapeadas as $chave => $nome) {
-    if (str_contains($dieta_limpa, $chave)) {
-        $dieta_encontrada = $nome;
-        break;
-    }
+  if (str_contains($dieta_limpa, $chave)) {
+    $dieta_encontrada = $nome;
+    break;
+  }
 }
 
 if (!$dieta_encontrada && isset($mensagens[$dieta_raw])) {
-    $dieta_encontrada = $dieta_raw;
+  $dieta_encontrada = $dieta_raw;
 }
 
 $dieta_exibicao = $dieta_raw;
 $dieta = $dieta_encontrada ?? 'Desconhecida';
 
-// === MONTA LINKS ===
+// ======================================================================
+// MONTA LINKS
+// ======================================================================
 $link_plano_html = '';
 $link_receitas_html = '';
 $alt_text = "Seu plano $dieta_exibicao está pronto.";
 
 if ($dieta !== 'Desconhecida' && isset($mensagens[$dieta])) {
-    $link = $mensagens[$dieta];
-    $link_plano_html = '<p><a href="' . $link . '" target="_blank" style="color:#1a73e8;font-weight:bold;text-decoration:none;">Baixar Plano ' . $dieta . ' (PDF)</a></p>';
-    $alt_text .= " Acesse: $link";
+  $link = $mensagens[$dieta];
+  $link_plano_html = '<p><a href="' . $link . '" target="_blank" style="color:#1a73e8;font-weight:bold;text-decoration:none;">Baixar Plano ' . $dieta . ' (PDF)</a></p>';
+  $alt_text .= " Acesse: $link";
 } else {
-    $link_plano_html = '<p><strong style="color:red;">[ERRO] Dieta não reconhecida: "' . htmlspecialchars($dieta_raw, ENT_QUOTES) . '"</strong></p>';
+  $link_plano_html = '<p><strong style="color:red;">[ERRO] Dieta não reconhecida: "' . htmlspecialchars($dieta_raw, ENT_QUOTES) . '"</strong></p>';
 }
 
-// 🔥 No upsell, sempre adiciona o PDF de receitas
+// 🔥 No upsell, o PDF de receitas é sempre adicionado
 $link_rec = $mensagens['200 Receitas Saudáveis'];
 $link_receitas_html = '<p><a href="' . $link_rec . '" target="_blank" style="color:#1a73e8;font-weight:bold;text-decoration:none;">Baixar 200 Receitas Saudáveis (PDF)</a></p>';
 $alt_text .= " | Receitas: $link_rec";
 
-// === CORPO DO E-MAIL ===
+// ======================================================================
+// CORPO DO E-MAIL
+// ======================================================================
 $body = '
 <h2>🎉 Obrigado por adquirir o Combo Completo!</h2>
 <p>Olá, <b>' . htmlspecialchars($nome, ENT_QUOTES) . '</b>!</p>
-<p>Conforme suas respostas no quiz, enviamos abaixo seu plano <b>' . htmlspecialchars($dieta_exibicao, ENT_QUOTES) . '</b> e o bônus exclusivo de receitas!</p>
-<p><strong>Clique nos links abaixo para baixar seus arquivos:</strong></p>' . $link_plano_html . $link_receitas_html . '
-<p>💚 <b>Dieta Pronta Online</b></p>';
+<p>Conforme suas respostas no quiz, enviamos abaixo seu plano <b>' . htmlspecialchars($dieta_exibicao, ENT_QUOTES) . '</b> e o bônus exclusivo de receitas.</p>
+<p><strong>Clique nos links abaixo para baixar seus arquivos:</strong></p>'
+. $link_plano_html . $link_receitas_html .
+'<p><b>Dieta Pronta Online 💚</b></p>';
 
 $body = trim(str_replace(["\n", "\r", "\t"], '', $body));
 
-// === ENVIO ===
+// ======================================================================
+// ENVIO
+// ======================================================================
 $mail = new PHPMailer(true);
 $response = [];
+
 try {
-    $mail->isSMTP();
-    $mail->Host       = $MAIL_HOST;
-    $mail->SMTPAuth   = true;
-    $mail->Username   = $MAIL_USER;
-    $mail->Password   = $MAIL_PASS;
-    $mail->SMTPSecure = PHPMailer::ENCRYPTION_SMTPS;
-    $mail->Port       = $MAIL_PORT;
-    $mail->CharSet    = 'UTF-8';
-    $mail->Encoding   = '8bit';
+  $mail->isSMTP();
+  $mail->Host       = $MAIL_HOST;
+  $mail->SMTPAuth   = true;
+  $mail->Username   = $MAIL_USER;
+  $mail->Password   = $MAIL_PASS;
+  $mail->SMTPSecure = PHPMailer::ENCRYPTION_SMTPS;
+  $mail->Port       = $MAIL_PORT;
+  $mail->CharSet    = 'UTF-8';
+  $mail->Encoding   = '8bit';
 
-    $mail->setFrom($MAIL_FROM, $MAIL_NAME);
-    $mail->addAddress($email);
-    $mail->Subject = '📦 Seu Combo Completo – Plano + Receitas (Dieta Pronta Online)';
-    $mail->isHTML(true);
-    $mail->Body    = $body;
-    $mail->AltBody = $alt_text;
+  $mail->setFrom($MAIL_FROM, $MAIL_NAME);
+  $mail->addAddress($email);
+  $mail->Subject = '📦 Seu Combo Completo – Plano + Receitas (Dieta Pronta Online)';
+  $mail->isHTML(true);
+  $mail->Body    = $body;
+  $mail->AltBody = $alt_text;
 
-    file_put_contents(__DIR__ . '/logs/last_email_upsell.html', $body);
+  file_put_contents(__DIR__ . '/logs/last_email_upsell.html', $body);
 
-    $mail->send();
+  $mail->send();
 
-    $response['ok'] = true;
-    $response['message'] = 'E-mail de upsell enviado com sucesso!';
-    $response['to'] = $email;
-    $response['dieta_raw'] = $dieta_raw;
-    $response['dieta_mapeada'] = $dieta;
+  $response['ok'] = true;
+  $response['message'] = 'E-mail de upsell enviado com sucesso!';
+  $response['to'] = $email;
+  $response['dieta_raw'] = $dieta_raw;
+  $response['dieta_mapeada'] = $dieta;
+
 } catch (Exception $e) {
-    $response['ok'] = false;
-    $response['error'] = $mail->ErrorInfo ?: $e->getMessage();
+  $response['ok'] = false;
+  $response['error'] = $mail->ErrorInfo ?: $e->getMessage();
 }
 
-// === LOG ===
+// ======================================================================
+// LOG
+// ======================================================================
 $log_dir = __DIR__ . '/logs';
 if (!is_dir($log_dir)) mkdir($log_dir, 0755, true);
 file_put_contents(
-    "$log_dir/envios_upsell.txt",
-    sprintf("[%s] EMAIL: %s | RAW: %s | MAPEADA: %s | STATUS: %s\n",
-        date('Y-m-d H:i:s'),
-        $email,
-        $dieta_raw,
-        $dieta,
-        $response['ok'] ? 'OK' : 'ERRO'
-    ),
-    FILE_APPEND
+  "$log_dir/envios_upsell.txt",
+  sprintf("[%s] EMAIL: %s | RAW: %s | MAPEADA: %s | STATUS: %s\n",
+    date('Y-m-d H:i:s'),
+    $email,
+    $dieta_raw,
+    $dieta,
+    $response['ok'] ? 'OK' : 'ERRO'
+  ),
+  FILE_APPEND
 );
 
+// ======================================================================
+// RETORNO JSON
+// ======================================================================
 if (!headers_sent()) {
-    header('Content-Type: application/json; charset=utf-8');
+  header('Content-Type: application/json; charset=utf-8');
 }
 echo json_encode($response, JSON_UNESCAPED_UNICODE | JSON_PRETTY_PRINT);
